fixed content overflow + sanitizer

--- a/packages/ng/forms/rich-text-input/rich-text-input.component.scss
+++ b/packages/ng/forms/rich-text-input/rich-text-input.component.scss
@@ -11,6 +11,10 @@
 	background-color: var(--palettes-grey-25);
 }
 
+.editor-content {
+	overflow: auto;
+}
+
 .editorTheme__textBold {
 	font-weight: bold;
 }
